--- a/app/views/rooms/_info-area.haml
+++ b/app/views/rooms/_info-area.haml
@@ -1,1 +1,50 @@
-.main
+.infoArea
+  .infoArea__infoHead
+    .infoArea__infoHead__userRoom
+      %h6 選択中のクラス
+      .infoArea__infoHead__userRoom__roomName
+        １−１
+    .infoArea__infoHead__headBox
+      = link_to '欠席連絡', "/", class: "headBtn"
+      = link_to '連絡帳', "/", class: "headBtn"
+      = link_to '配布手紙', "/", class: "headBtn"
+  %ul.infoArea__infoMonths
+    %li.inforArea__infoMonth ４月
+    %li.inforArea__infoMonth ５月
+    %li.inforArea__infoMonth ６月
+    %li.inforArea__infoMonth ７月
+    %li.inforArea__infoMonth ８月
+    %li.inforArea__infoMonth ９月
+    %li.inforArea__infoMonth １０月
+    %li.inforArea__infoMonth １１月
+    %li.inforArea__infoMonth １２月
+    %li.inforArea__infoMonth １月
+    %li.inforArea__infoMonth ２月
+    %li.inforArea__infoMonth ３月
+  .infoArea__infoContent
+    .infoArea__infoContent__title
+      連絡帳
+    .infoArea__infoContent__Index
+      .conte 1日
+      .conte 2日
+      .conte 3日
+      .conte 4日
+      .conte 5日
+      .conte 8日
+      .conte 9日
+      .conte 10日
+      .conte 11日
+      .conte 12日
+      .conte 15日
+      .conte 16日
+      .conte 17日
+      .conte 18日
+      .conte 19日
+      .conte 22日
+      .conte 23日
+      .conte 24日
+      .conte 25日
+      .conte 26日
+      .conte 29日
+      .conte 30日
+      .conte 31日
