--- a/app/assets/stylesheets/modules/_rooms.scss
+++ b/app/assets/stylesheets/modules/_rooms.scss
@@ -109,6 +109,10 @@ header {
         height: 50px;
         text-align: center;
         line-height: 50px;
+        .roomNumberLink {
+          color: black;
+          text-decoration: none;
+        }
       }
     }
   }
