--- a/app/assets/stylesheets/modules/_rooms.scss
+++ b/app/assets/stylesheets/modules/_rooms.scss
@@ -52,7 +52,7 @@ header {
 .wrapper {
   height: calc(100% - 115px);
   width: 100%;
-  background-color: lightpink;
+  background-color: ivory;
   display: flex;
   .sideBar {
     height: 100%;
