--- a/app/assets/stylesheets/modules/_contact_books_index.scss
+++ b/app/assets/stylesheets/modules/_contact_books_index.scss
@@ -174,11 +174,18 @@ header {
         }
       }
     }
-    &__infoMonths {
+    &__infoMenu {
       height:50px;
       color: black;
       background-color: ivory;
       border-bottom: 1px solid forestgreen;
+      display: flex;
+      align-items: center;
+      .backBtn {
+        text-decoration: none;
+        color: purple;
+        margin-left: 30px;
+      }
     }
     &__infoContent {
       height:calc(100% - 130px);
