--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,5 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/contact_books_index";
-@import "modules/contact_books_show"
+@import "modules/contact_books_show";
+@import "modules/letter_contents";
