--- a/app/views/contact_books/_info-area.haml
+++ b/app/views/contact_books/_info-area.haml
@@ -10,8 +10,8 @@
         -#   = link_to '欠席連絡', "/", class: "HeadBtn abscentContact"
         %li.headBtn
           = link_to '連絡帳', "/", class: "HeadBtn contactBook"
-        -# %li.headBtn
-        -#   = link_to '配布手紙', "/", class: "HeadBtn letters"
+        %li.headBtn
+          = link_to '配布手紙', room_letters_path, class: "HeadBtn letters"
   .infoArea__infoMenu
     =link_to '戻る', room_contact_books_path, class: "backBtn"
    
