--- a/app/views/letters/_letter_contents.html.haml
+++ b/app/views/letters/_letter_contents.html.haml
@@ -8,9 +8,12 @@
       %ul.headBtns
         %li.headBtn
           = link_to '連絡帳', "/", class: "HeadBtn contactBook"
+        %li.headBtn
+          = link_to '配布手紙', room_letters_path, class: "HeadBtn letters"
 
   .infoArea__infoMenu
-    =link_to '戻る', room_contact_books_path, class: "backBtn"
+    = link_to '戻る', room_contact_books_path, class: "backBtn"
+    = link_to 'アップロード', new_room_letter_path(@room), class: "uploadBtn"
     
   .infoArea__infoContent
     .infoArea__infoContent__lettersBox
