--- a/app/views/letters/_letter_contents.html.haml
+++ b/app/views/letters/_letter_contents.html.haml
@@ -16,6 +16,12 @@
     = link_to 'アップロード', new_room_letter_path(@room), class: "uploadBtn"
     
   .infoArea__infoContent
+    .infoArea__infoContent__letterHead
+      %p.headTitle 配布手紙
     .infoArea__infoContent__lettersBox
-      hello new world
-
+      - @letters.each do |le|
+        .Letter
+          = link_to image_url("#{le.pdf}"), class: "letterFile" do
+            = le.name
+          配布日：
+          = le.set_date
