letter breadCrumsLink implemented

--- a/app/assets/stylesheets/modules/_letters_index.scss
+++ b/app/assets/stylesheets/modules/_letters_index.scss
@@ -1,6 +1,35 @@
 .infoArea__infoMenu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  .breadCrumbsLink {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    .roomSelectBtn,
+    .contactBookSelectBtn {
+      text-decoration: none;
+    }
+    .roomSelectBtn:hover,
+    .contactBookSelectBtn:hover {
+      text-decoration: underline;
+    }
+    .fa.fa-chevron-right {
+      margin: 0 5px;
+    }
+  }
   .uploadBtn {
-    margin-left: 30px;
+    text-decoration: none;
+    background-color: gold;
+    border: 2px solid lightgray;
+    padding: 3px;
+  }
+  .uploadBtn:hover {
+    text-decoration: none;
+    background-color: lightsalmon;
+    border: 2px solid lightgray;
+    padding: 3px;
   }
 }
 
