views and stylesheet made

--- a/app/views/contact_books/_contactBook_contents.html.haml
+++ b/app/views/contact_books/_contactBook_contents.html.haml
@@ -22,6 +22,7 @@
       %li
         = @contact_book.set_date
         の連絡帳
+    = link_to 'アップロード', "/", class: "uploadBtn"
     
   .infoArea__infoContent
     .infoArea__infoContent__itemsBox
