--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,4 @@
 @import "modules/contact_books_show";
 @import "modules/letters_index";
 @import "modules/letters_new";
+@import "modules/absent_contacts"
