--- a/app/views/contact_books/_info-area.haml
+++ b/app/views/contact_books/_info-area.haml
@@ -6,8 +6,8 @@
         = @room.number
     .infoArea__infoHead__headBox
       %ul.headBtns
-        -# %li.headBtn
-        -#   = link_to '欠席連絡', "/", class: "HeadBtn abscentContact"
+        %li.headBtn
+          = link_to '欠席連絡', room_absent_contacts_path, class: "HeadBtn abscentContact"
         %li.headBtn
           = link_to '連絡帳', room_contact_books_path, class: "HeadBtn contactBook"
         %li.headBtn
