--- a/app/assets/stylesheets/modules/_letters_index.scss
+++ b/app/assets/stylesheets/modules/_letters_index.scss
@@ -35,11 +35,11 @@
 
 .infoArea__infoContent {
   padding: 10px 30px;
-  &__letterHead {
+  &__HeadTitle {
     margin-bottom: 30px;
     .headTitle {
       text-align: center;
-      font-size: 40px;
+      font-size: 30px;
     }
   }
   &__lettersBox {
