--- a/app/assets/stylesheets/modules/_letters_index.scss
+++ b/app/assets/stylesheets/modules/_letters_index.scss
@@ -34,8 +34,9 @@
 }
 
 .infoArea__infoContent {
-  padding: 10px 30px;
+  padding: 10px 100px;
   &__HeadTitle {
+    border-bottom: 1px solid black;
     margin-bottom: 30px;
     .headTitle {
       text-align: center;
@@ -49,6 +50,7 @@
     .Letter {
       margin: 20px;
       .letterFile {
+        font-size: 25px;
         color: black;
         text-decoration: none;
         margin-right: 20px;
