--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -7,7 +7,11 @@
     .infoArea__infoHead__headBox
       %ul.headBtns
         %li.headBtn
-          = link_to '欠席連絡', room_absent_contacts_path, class: "HeadBtn letters"
+          = link_to '欠席連絡', room_absent_contacts_path, class: "HeadBtn abscentContact"
+        %li.headBtn
+          = link_to '連絡帳', room_contact_books_path, class: "HeadBtn contactBook"
+        %li.headBtn
+          = link_to '配布手紙', room_letters_path, class: "HeadBtn letters"
 
   .infoArea__infoMenu
     %ul.breadCrumbsLink
