user model and room_user model and views made

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,5 @@
 @import "modules/contact_books_show";
 @import "modules/letters_index";
 @import "modules/letters_new";
-@import "modules/absent_contacts"
+@import "modules/absent_contacts";
+@import "modules/_devise";
