--- a/app/assets/stylesheets/modules/_contact_books_index.scss
+++ b/app/assets/stylesheets/modules/_contact_books_index.scss
@@ -54,6 +54,8 @@ header {
   width: 100%;
   background-color: ivory;
   display: flex;
+  overflow: hidden;
+  overflow-y: scroll;
   .sideBar {
     height: 100%;
     width: 20vh;
