--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,11 +1,11 @@
 - if controller_name != 'sessions'
-  = link_to "ログイン画面へ", new_session_path(resource_name)
+  = link_to "ログイン画面へ", new_session_path(resource_name), class: "deviseLink"
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "ユーザー登録画面へ", new_registration_path(resource_name)
+  = link_to "ユーザー登録画面へ", new_registration_path(resource_name), class: "deviseLink"
   %br/
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to "パスワードをお忘れですか?", new_password_path(resource_name)
+  = link_to "パスワードをお忘れですか?", new_password_path(resource_name), class: "deviseLink"
   %br/
 - if devise_mapping.confirmable? && controller_name != 'confirmations'
   = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
