upload bottun for contact_book made

--- a/app/views/contact_books/_info-area.haml
+++ b/app/views/contact_books/_info-area.haml
@@ -20,7 +20,7 @@
         %i.fa.fa-chevron-right
       %li
         %p.contactBookSelect 連絡帳
-   
+    = link_to 'アップロード', "/", class: "uploadBtn"   
   .infoArea__infoContent
     -@everymonth.each do |month|
       .infoArea__infoContent__title
