new view for uploading contact book done

--- a/app/views/contact_books/new.html.haml
+++ b/app/views/contact_books/new.html.haml
@@ -6,22 +6,22 @@
         .FormField__labelDate
           = f.label :"日付", class: "Date"
         .FormField__inputDate
-          = f.date_select :released_at, placeholder: "日付"
+          = f.date_select :date, placeholder: "日付"
         .FormField__labelLettr
           = f.label :"手紙"
         .FormField__inputLetter
-          = f.number_field :name, placeholder: "手紙" 
+          = f.number_field :letter, placeholder: "手紙" 
         .FormField__labelSchedule
           = f.label :"時間割"
         .FormField__inputSchedule
-          = f.text_field :pdf, placeholder: "時間割"
+          = f.text_field :schedule, placeholder: "時間割"
         .FormField__labelHomework
           = f.label :"宿題"
         .FormField__inputHomework
-          = f.text_select :released_at, placeholder: "宿題"
+          = f.text_field :homework, placeholder: "宿題"
         .FormField__labelInform
           = f.label :"連絡"
         .FormField__inputInform
-          = f.text_field :name, placeholder: "連絡", rows:10 
+          = f.text_field :inform, placeholder: "連絡", rows:10 
         .FormField__submit
           = f.submit "アップロード", class:"submit-btn"
