--- a/app/views/contact_books/new.html.haml
+++ b/app/views/contact_books/new.html.haml
@@ -1,27 +1,28 @@
 .wrapper
-  .letterField
-    %p.head "連絡帳アップロードフォーム"
-    =form_with model: [@room, @contact_book], method: :post, local: true do |f|
-      .FormField
-        .FormField__labelDate
-          = f.label :"日付", class: "Date"
-        .FormField__inputDate
-          = f.date_select :date, placeholder: "日付"
-        .FormField__labelLettr
-          = f.label :"手紙"
-        .FormField__inputLetter
-          = f.number_field :letter, placeholder: "手紙" 
-        .FormField__labelSchedule
-          = f.label :"時間割"
-        .FormField__inputSchedule
-          = f.text_field :schedule, placeholder: "時間割"
-        .FormField__labelHomework
-          = f.label :"宿題"
-        .FormField__inputHomework
-          = f.text_field :homework, placeholder: "宿題"
-        .FormField__labelInform
-          = f.label :"連絡"
-        .FormField__inputInform
-          = f.text_field :inform, placeholder: "連絡", rows:10 
-        .FormField__submit
-          = f.submit "アップロード", class:"submit-btn"
+  .wall
+    .CotactBookField
+      %p.head "連絡帳アップロードフォーム"
+      =form_with model: [@room, @contact_book], method: :post, local: true do |f|
+        .FormField
+          .FormField__labelDate
+            = f.label :"日付", class: "Date"
+          .FormField__inputDate
+            = f.date_select :date, placeholder: "日付"
+          .FormField__labelLetter
+            = f.label :"手紙"
+          .FormField__inputLetter
+            = f.number_field :letter, placeholder: "手紙" 
+          .FormField__labelSchedule
+            = f.label :"時間割"
+          .FormField__inputSchedule
+            = f.text_field :schedule, placeholder: "時間割"
+          .FormField__labelHomework
+            = f.label :"宿題"
+          .FormField__inputHomework
+            = f.text_field :homework, placeholder: "宿題"
+          .FormField__labelInform
+            = f.label :"連絡"
+          .FormField__inputInform
+            = f.text_field :inform, placeholder: "連絡", rows:10 
+          .FormField__submit
+            = f.submit "アップロード", class:"submit-btn"
