--- a/app/views/letters/new.html.haml
+++ b/app/views/letters/new.html.haml
@@ -1,5 +1,5 @@
 .wrapper
-  .wall
+  .Wall
     .letterField
       %p.head "配布手紙アップロードフォーム"
       =form_with model: [@room, @letter], method: :post, local: true do |f|
