--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -250,24 +250,31 @@ footer {
 
 
 // new view's scss
-.wall {
+.Wall {
+  padding-top: 30px;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
   .CotactBookField {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    padding: 10px 0 0 50px ;
+    margin-bottom: 20px;
     .head {
       font-size: 30px;
     }
     .FormField {
       width: 650px;
-      padding: 10px 50px;
+      padding: 10px 50px 30px 50px;
       border: 1px solid black;
       &__labelDate,
       &__labelLetter,
       &__labelSchedule,
       &__labelHomework,
+      &__labelbring,
       &__labelInform {
         font-size: 20px;
       }
@@ -275,21 +282,35 @@ footer {
       &__inputLetter,
       &__inputSchedule,
       &__inputHomework,
+      &__inputbring,
       &__inputInform {
-        height: 50px;
         font-size: 25px;
         margin: 10px 0 0 40px;
+        .scheduleInput {
+          width: 400px;
+        }
+        .homeworkInput {
+          height: 50px;
+          width: 400px;
+        }
+        .inputBring {
+          height: 150px;
+          width: 400px;
+        }
+        .informInput {
+          height: 300px;
+          width: 400px;
+        }
       }
       &__submit {
         font-size: 40px;
-        margin: 60px 0 0 80px;
-      }
-      .submit-btn {
-
+        margin: 30px 0 0 80px;
       }
     }
   }
 }
+
+
 
 
 
