views of uploading form for absent contact made

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "font-awesome";
 @import "modules/contact_books";
 @import "modules/letters";
-@import "modules/absent_contacts";
+@import "modules/_absent_contacts";
 @import "modules/_devise";
