views for uploading form of absent contact made

--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -24,7 +24,7 @@
             width: 400px;
           }
           .afterContact {
-            width: 100px;
+            width: 150px;
           }
           .absentAt,
           .absentKind,
@@ -42,10 +42,10 @@
             }
           }
           .SubmitBtn {
-            width: 50px;
+            width: 100px;
             text-align: center;
             .submit-btn {
-
+              margin-top: 12px;
             }
           }
         }
