index view for uploading absent contact made

--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -59,6 +59,12 @@
       }
       &__index {
         padding: 10px 20px 0 20px;
+        .contactHistoryBox {
+          display: flex;
+          .contact {
+            margin: 20px 5px;
+          }
+        }
       }
     }
   }
