--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -4,6 +4,8 @@
        padding: 30px 30px;
       &__FormHead {
         font-size: 20px;
+        padding: 2px;
+        border-bottom: 2px solid black;
       }
       &__FormBox {
         padding: 10px 20px 0 20px;
@@ -15,16 +17,16 @@
           padding: 2px 10px;
           border: 2px solid lightgray;
           .absentAt {
-            width: 100px;
+            width: 110px;
           }
           .absentKind {
             width: 100px;
           }
           .absentReason {
-            width: 400px;
+            width: 60%;
           }
           .afterContact {
-            width: 150px;
+            width: 142px;
           }
           .absentAt,
           .absentKind,
@@ -38,7 +40,6 @@
             .inputAfterContact {
               width: 100%;
               height: 50px;
-  
             }
           }
           .SubmitBtn {
@@ -53,9 +54,10 @@
     }
     &__contactsHistory {
       margin-top: 40px;
- 
       &__title {
         font-size: 20px;
+        padding: 2px;
+        border-bottom: 2px solid black;
       }
       &__index {
         padding: 10px 20px 0 20px;
